fixed bug on mobile menu

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -278,6 +278,7 @@ p.body-4 {
             
             &.activeBckgd {
                 background: var(--gray-90010, rgba(17, 24, 39, 0.1));
+                -webkit-backdrop-filter: blur(4px);
                 backdrop-filter: blur(4px);
                 transition: all 0.5s ease-in-out;
             }
